<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyDashes">
    <string name="app_name">HeartlandCore</string>
    <string name="app_name_about">Heartland Mobile Payments</string>
    <string name="action_settings">Settings</string>
    <string name="label_permission">access HPS applications</string>
    <string name="desc_permission">Allows the application to access Heartland Payment Systems applications.</string>
    <string name="card_transactions">Card Transactions</string>
    <string name="mobuyle">Heartland</string>
    <string name="other_transactions">Other Transactions</string>
    <string name="voidText">Void</string>
    <string name="adjust_tips">Adjust Tips</string>
    <string name="batch">Batch</string>
    <string name="reports">Reports</string>
    <string name="batch_summary">Batch Summary</string>
    <string name="transaction_detail">Transaction Detail</string>
    <string name="gift_transaction_detail">Gift Transaction Detail</string>
    <string name="giftTransactionDetailTitle">Gift Transaction</string>
    <string name="batch_status">Batch Status</string>
    <string name="tip_report">Tip Report</string>
    <string name="settings">Settings</string>
    <string name="users">Users</string>
    <string name="allowed_transactions">Allowed Transactions</string>
    <string name="transactions_settings">Transaction Settings</string>
    <string name="receipt_settings_tracker_label">Merchant Settings</string>
    <string name="device_settings">Card Readers &amp; Printers</string>
    <string name="device_settings_tracker_label">Device Settings</string>
    <string name="about">About</string>
    <string name="app_info">Application Information</string>
    <string name="support">Support</string>
    <string name="how_can_we_help">How can HPS help?</string>
    <string name="merchant_bill_of_rights">Merchant Bill of Rights</string>
    <string name="become_heartland_merchant">Become a Merchant</string>
    <string name="browse_heartland_site">Browse HPS Web Site</string>
    <string name="app_advisories">Application Advisories</string>
    <string name="legal">Legal</string>
    <string name="terms_and_conditions">Legal</string>
    <string name="log_out">Log Out</string>
    <string name="dropdown_description">Expandable menu item</string>
    <string name="drawerOpen">Show navigation menu</string>
    <string name="drawerClose">Hide navigation menu</string>
    <string name="acceptLegalTermsPrompt">I agree</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="error">Error</string>
    <string name="warning">Warning</string>
    <string name="error_storage_unavailable">Storage is unavailable. Please reconnect it and try again.</string>
    <string name="error_file_not_created">The file could not be created. Please check your storage and try again.</string>
    <string name="batchSyncError">Batch Sync Error</string>
    <string name="internalError">Internal error</string>
    <string name="unknownError">An unknown error occurred. Please try again.</string>
    <string name="invalidGatewayResponse">Invalid Gateway Response</string>
    <string name="invalidCredentials">Invalid Credentials</string>
    <string name="success">Success</string>
    <string name="credentialsValidated">Credentials Validated</string>
    <string name="noProdCredsInDevBuild">Production credentials cannot be used with a dev build.</string>
    <string name="failedToSendLogs">Failed to send log files</string>
    <string name="invalidUserId">Invalid User ID</string>
    <string name="notEnoughSpaceForLogger">There is not enough space on the device to enable audit logging. To enable it please free up space on internal or external storage and restart this application.</string>
    <string name="testModeWarning">You are taking a Test Drive. Live credit card transactions will NOT be processed. Any data entered will NOT be saved.</string>
    <string name="locationPermissionRequestMessage">The device\'s location can be sent with each transaction in order to help fight fraud. If you\'d like to allow this, select Allow in the next dialog.</string>
    <string name="writePermissionRequestMessage">Audit logs from this device can be stored in order to help fight fraud. If you\'d like to allow this, select Allow in the next dialog.</string>
    <string name="avsMismatchTitle">AVS Mismatch</string>
    <string name="avsMismatchPrompt"> This transaction has an AVS Mismatch.\n\nDo you want to Accept or Void this transaction?</string>
    <string name="avsAndPartialAuthTitle">Warning</string>
    <string name="avsAndPartialAuthPromptFormat">This transaction is partially approved for $%1$s. The balance due is $%2$s.\n\nThere is also an AVS Mismatch.\n\nDo you want to Accept or Void this transaction?</string>
    <string name="balanceDue">Balance Due</string>
    <string name="partialPaymentAuthorizationFormat">This transaction is partially approved for $%1$s. The balance due is $%2$s.\n\nDo you want to Accept or Void this transaction?</string>
    <string name="duplicateTransactionTitle">Duplicate Transaction</string>
    <string name="duplicateTransactionMessage">Same card number, transaction type, and amount as previous transaction.  Allow duplicate transaction?</string>
    <string name="communicating">Communicating&#8230;</string>
    <string name="communicatingPleaseWait">Communicating. Please wait&#8230;</string>
    <string name="transactionDeclined">Transaction Declined</string>
    <string name="responseErrorFormat">Response Error: %d</string>
    <string name="communicationsError">Communication Error</string>
    <string name="unknown_orca_error">An unknown server error occurred. Please try again.</string>
    <string name="hostUnavailable">Host Unavailable</string>
    <string name="safMessageFormat">%s\n\nDo you want to accept this transaction for later processing? Please refer to Help for more information.</string>
    <string name="callForAuth">Call for Authorization</string>
    <string name="callForAuthFormat">Call %s</string>
    <string name="invalidReversalResponse">Invalid Reversal Response</string>
    <string name="invalidChipDeclineResponse">Invalid Chip Decline Response</string>
    <string name="invalidCreditOfflineSaleResponse">Invalid Offline Credit Sale Response</string>
    <string name="tipEntry">Tip Entry</string>
    <string name="totalWithTip">Total With Tip</string>
    <string name="otherAmount">Other</string>
    <string name="twentyPercent">20\%</string>
    <string name="fifteenPercent">15\%</string>
    <string name="tenPercent">10\%</string>
    <string name="systemUpdateTitle">System Update</string>
    <string name="systemUpdateMessage">Upgrading the system. Please do not close the app&#8230;</string>
    <string name="systemUpdateErrorMessage">An error occurred while upgrading this application. Please contact the Heartland Support Center at 1-888-963-3600</string>
    <string name="auditLogNotificationForDemoMode">Audit logs are not available in demo mode. In standard mode they store and retain up to %d months of information for events such as transactions, logins, etc.</string>
    <string name="auditLogNotificationForClerk">You do not have access to audit log controls. Please contact your admin.</string>
    <string name="auditLogsSaved">Audit logs saved</string>
    <string name="auditLogsNotSaved">Files could not be exported. Please try again.</string>
    <string name="couldNotWrite">Storage unavailable. Please check your device settings and try again</string>
    <string name="auditLogLocationMessage">The files were save to: \n\n %s\n\nEmail now?</string>
    <string name="amexVoiceAuthNumber">1-888-963-3600</string>
    <string name="discoverVoiceAuthNumber">1-888-963-3600</string>
    <string name="gsbVoiceAuthNumber">1-800-399-3035</string>
    <string name="visamcVoiceAuthNumber">1-800-990-2265</string>
    <string name="undefined_role_name">&lt;role undefined&gt;</string>
    <string name="demo_role_name">Demo</string>
    <string name="clerk_role_name">Clerk</string>
    <string name="admin_role_name">Manager</string>
    <string name="login_out_of_bounds">Login Name must be %1$d to %2$d characters long.</string>
    <string name="password_out_of_bounds">Password must be %1$d to %2$d characters long.</string>
    <string name="admin_password_aditional_error_message">\nPassword must contain at least one number and at least one letter and no special characters.\nNew password cannot match last 4 passwords.</string>
    <string name="resetAdminPassword">Reset Manager Password</string>
    <string name="addNewUser">Add New User</string>
    <string name="editUser">Edit User</string>
    <string name="delete">Delete</string>
    <string name="deleteUserConfirmation">User %s will be permanently deleted!</string>
    <string name="areYouSure">Are you sure\?</string>
    <string name="deleteUser">Delete User</string>
    <string name="changePassword">Set Password</string>
    <string name="cantEditAdmin">You can not edit the Manager user.</string>
    <string name="cantDeleteLoggedInUser">You can not delete current user.</string>
    <string name="addUser">Add User</string>
    <string name="addUserButton">+</string>
    <string name="userNameNotUnique">User name must be unique.</string>
    <string name="okToLogOut">Are you sure you want to log out\?</string>
    <string name="save">Save</string>
    <string name="submit">Submit</string>
    <string name="clear">Clear</string>
    <string name="demo">Demo</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="retry">Retry</string>
    <string name="continueLabel">Continue</string>
    <string name="login_title">Welcome to Heartland</string>
    <string name="register_now">Register Now</string>
    <string name="test_drive">Take a Test Drive</string>
    <string name="options">Options</string>
    <string name="reset">Reset</string>
    <string name="done">Done</string>
    <string name="next">Next</string>
    <string name="restartTransaction">Restart Transaction</string>
    <string name="activation">Activation</string>
    <string name="merchantID">Merchant ID</string>
    <string name="activationCode">Activation Code</string>
    <string name="enterMerchantId">Please enter Merchant ID</string>
    <string name="enterActivationCode">Please enter Activation Code</string>
    <string name="activationFailed">The Merchant ID and/or Activation Code are incorrect. Please try again.</string>
    <string name="activationCodeNull">Your gateway credentials are invalid.</string>
    <string name="settingsDownloadFailed">The settings could not be downloaded. Please try again.</string>
    <string name="noteNoInfoCallHSC">Please call the Heartland Support Center at 1-888-963-3600 to register to use this application, or to reset your Activation Code.</string>
    <string name="licenseID">License ID</string>
    <string name="siteID">Site ID</string>
    <string name="deviceID">Device ID</string>
    <string name="softwareUserID">Software User ID</string>
    <string name="loginName">Login Name</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="realName">Real Name</string>
    <string name="role">Role</string>
    <string name="cardReader">Card Reader</string>
    <string name="bluetoothPrinter">Bluetooth Printer</string>
    <string name="cardNumber">Card Number</string>
    <string name="expiration">Exp. Date</string>
    <string name="cardholder">Name</string>
    <string name="tranId">Transaction ID</string>
    <string name="login">Login</string>
    <string name="question">Question:</string>
    <string name="answer">Answer:</string>
    <string name="emailRecieptPrompt">Enter customer email address. Use semicolon delimited list for multiple email addresses.</string>
</resources>