<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mobuyle="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/dialog_left_margin"
    android:paddingRight="@dimen/dialog_right_margin"
    android:paddingTop="@dimen/dialog_top_margin" >

    <com.hps.mobuyle.core.widget.CardNumberWidget
        android:id="@+id/cardNumberWidget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        mobuyle:labelText="@string/cardNumber"
        mobuyle:nextField="@+id/expDateWidget" />

    <com.hps.mobuyle.core.widget.DateWidget
        android:id="@+id/expDateWidget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        mobuyle:labelText="@string/expiration"
        mobuyle:nextField="@+id/transTypeWidget" />

    <com.hps.mobuyle.core.widget.EnhancedEditTextWidget
        android:id="@+id/cardholderNameWidget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:visibility="gone"
        mobuyle:labelText="@string/cardholder" />

</LinearLayout>