<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:stretchColumns="1" >

        <!-- TRANSACTION ID -->

        <TableRow
            android:id="@+id/transactionIdRow"
            android:paddingTop="5dip"
            android:visibility="gone" >

            <TextView
                android:gravity="left|center_vertical"
                android:text="@string/tranId" />

            <com.hps.mobuyle.core.widget.EnhancedEditText
                android:id="@+id/transactionId"
                android:digits="0123456789"
                android:gravity="right|center_vertical"
                android:inputType="phone"
                android:maxLength="10" />
        </TableRow>

        <!-- BATCH -->

        <RelativeLayout
            android:id="@+id/batchSpinnerRow"
            android:paddingTop="5dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:gravity="left|center_vertical"
                android:text="@string/batch" />

            <Spinner
                android:id="@+id/batchSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="right|center_vertical" />
        </RelativeLayout>

        <!-- LOGIN -->

        <RelativeLayout android:paddingTop="5dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:gravity="left|center_vertical"
                android:text="@string/login" />

            <Spinner
                android:id="@+id/loginSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="right|center_vertical" />
        </RelativeLayout>
    </TableLayout>

    <LinearLayout
        android:id="@+id/buttonContainer"
        style="@style/ButtonContainer"
        android:layout_gravity="bottom|center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/cancelButton"
            style="@style/ButtonInContainer"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/okButton"
            style="@style/ButtonInContainer"
            android:text="@string/ok" />
    </LinearLayout>

</LinearLayout>